<resources>
    <string name="app_name">VoiceChanger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_logo">
        <font color="@color/white">.voice</font>switch
    </string>

    <string name="hello_text_1">
        <font fgcolor="@color/white">Записывай аудио\nв</font>
        превосходном
        <font fgcolor="@color/white">качестве!</font>
    </string>
    <string name="hello_text_2">
        <font fgcolor="@color/white">Накладывай</font>\n
        эффекты
        <font fgcolor="@color/white">на запись</font>
    </string>
    <string name="hello_text_3">
        <font fgcolor="@color/white">Задавай </font>
        настройки\n
        <font fgcolor="@color/white">голоса</font>
    </string>
    <string name="hello_text_4">
        <font fgcolor="@color/white">Преобразуй </font>
        текст\n в аудио
        <font fgcolor="@color/white">с любым\n голосом</font>
    </string>
    <string name="hello_text_5">
        <font fgcolor="@color/white">Подключи\n</font>
        премиум-подписку
    </string>
    <string name="hello_text_btn_5">
        Подключить\n<font size="12">всего за $2.99 в месяц</font>
    </string>
    <string name="recording">Запись аудио</string>
    <string name="dowloading">Загрузить файл</string>
    <string name="text_to_audio">Текст в аудио</string>
    <string name="my_studio">Моя студия</string>
    <string name="catalog_effects">Каталог эффектов</string>
    <string name="settings">Настройки</string>
    <string name="desc_politico">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
    </string>
    <string name="header_politico">Политика конфиденциальности</string>
</resources>